k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bot-marketplace
  labels:
    name: bot-marketplace
    app: bot-marketplace
